# eddyDetector

./: README.md  __init__.py  eddy_methods.py  pyproject.toml  requirements.txt  test.py
docs/source/: conf.py
eddyDetector/: __init__.py  eddy.py  interpolate.py  plotting.py  reader.py
eddy_source/: __init__.py  eddy_methods.py  plotting.py  reader.py
eddydetector/: eddy.py
main/: detect.py
src/: __init__.py  eddy_methods.py  plotting.py  reader.py
test_name/: __init__.py
tests/: gldetect.py  test.py  test_global_minima.py
usage/: detect.py
