[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eddyDetector"
version = "0.1.0"
description = "A package for detecting eddies from altimetry data"
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name = "Cian Kelly", email = "cianrkelly23@gmail.com" }
]
dependencies = []

[tool.setuptools]
packages = ["eddyDetector"]

