[tool.poetry]
name = "eddydetector"
version = "0.1.0"
description = "package for detecting eddies from altimetry data"
authors = ["Cian Kelly <cianrkelly23@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.9,<4.0"
cdsapi = "^0.7.5"
numpy = "<2.0.0,>=1.23.0"
xarray = "^2024.11.0"
scipy = "^1.14.1"
matplotlib = "^3.10.0"
netcdf4 = "^1.7.2"
cartopy = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
